noinst_HEADERS = \
Application.h \
Area.h \
Configdata.h \
Cycle.h \
Dataspace.h \
Family.h \
Group.h \
Image.h \
Notify.h \
Numeric.h \
Rectangle.h \
Slider.h \
Text.h \
Window.h \
applicationdata.h \
areadata.h \
builtin.h \
configdatadata.h \
dataspacedata.h \
drawing.h \
event_impl.h \
eventhandler.h \
extclass.h \
familydata.h \
file.h \
font.h \
frame.h \
gc.h \
groupdata.h \
image.h \
imagedata.h \
imspec.h \
key.h \
macros.h \
mcc.h \
minmax.h \
muikey.h \
muio.h \
notifydata.h \
numericdata.h \
pen.h \
pixmap.h \
prefs.h \
rectangledata.h \
renderinfo.h \
shortcuts.h \
sliderdata.h \
stringset.h \
textdata.h \
textengine.h \
uproperties.h \
window_impl.h \
windowdata.h \
zunepriv.h



